<resources>
    <string name="app_name">Mi lista de la compra</string>
    <string name="listas_text">Mis listas de la compra</string>
    <string name="add_product">Añadir producto</string>
    <string name="data_charged">Datos cargados con exito</string>
    <string name="db_error">Error al conectar con la base de datos</string>
    <string name="db_duplicate_list">Ya existe una lista con ese nombre</string>
    <string name="db_duplicate_element">Ya existe una elemento con ese nombre</string>
    <string name="loading_data">Cargando datos</string>
    <string name="add_list">Crear lista</string>
    <string name="settings_text">Ajustes</string>
    <string name="start_service">Iniciar servicio</string>
    <string name="stop_service">Parar servicio</string>
    <string name="register">Crear usuario</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="user_desc">Tu nombre de usuario</string>
    <string name="password_desc">Tu contraseña</string>
    <string name="add_element">Añadir elemento</string>
    <string name="delete_element">Eliminar elemento</string>
    <string name="delete_list">Eliminar lista</string>
    <string name="register_text">Registrarse</string>
    <string name="new_name">Nombre</string>
    <string name="new_surname1">Apellido 1</string>
    <string name="new_surname2">Apellido 2</string>
    <string name="share_list_text">Compartir esta lista</string>
    <string name="create_list_text">Crear nueva lista</string>
    <string name="new_list_name">Nombre de la lista</string>
    <string name="create_list_button">Crear</string>
    <string name="saving_data">Guardando datos</string>
    <string name="data_saved">Datos guardados</string>
    <string name="create_item">Crear elemento</string>
    <string name="new_item_name_text">Nombre</string>
    <string name="new_item_quantity_text">Cantidad</string>
    <string name="new_item_prize_text">Precio</string>
    <string name="new_item_buttom_text">Añadir</string>
    <string name="share_list_text_fragment">Compartir la lista: </string>
    <string name="share_list_text_user">Usuario con quien compartir</string>
    <string name="share_lit_button_text">Compartir</string>
    <string name="user_not_found">El usuario no existe</string>
    <string name="share_ok">Lista compartida con exito</string>
    <string name="delete_list_title">Eliminar lista</string>
    <string name="delete_list_name">Nombre de la lista</string>
    <string name="delete_list_button_text">Borrar</string>
    <string name="delete_item_title_text">Borrar elemento</string>
    <string name="delete_item_name">Nombre del elemento</string>
    <string name="delete_item_button_text">Eliminar</string>
    <string name="recover_item_title_text">Recuperar elemento</string>
    <string name="recover_item_button_text">Recuperar</string>
    <string name="recover_item">Recuperar elemento</string>
    <string name="recover_list">Recuperar lista</string>
    <string name="edit_item">Editar elemento</string>
    <string name="edit_item_button_text">Editar</string>
    <string name="insert_something">Introduzca un parámetro</string>
    <string name="insert_list_name">Introduzca el nombre de la lista</string>
    <string name="insert_element_name">Introduzca el nombre del elemento</string>
    <string name="insert_element_quantity">Introduzca la cantidad del elelemto</string>
    <string name="insert_element_price">Introduzca el precio del elemento</string>
    <string name="reload">Recargar</string>
    <string name="db_duplicate_participacion">Ese usuario ya participa en la lista</string>
    <string name="insert_user_name">Introduzca el nombre de usuario</string>
    <string name="insert_user_nick">Introduzca el nick de usuario</string>
    <string name="insert_user_pass">Introduzca la contraseña</string>
    <string name="insert_user_surname">Introduzca los dos apellidos de usuario</string>
</resources>
