<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10pt"
    android:orientation="vertical"
    tools:context="com.example.rojo.milistadelacompra.RegisterActivity">

    <TextView
        android:id="@+id/text_create_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_item"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/new_item_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_item_name_text" />

    <EditText
        android:id="@+id/new_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/new_item_quantity_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_item_quantity_text" />

    <EditText
        android:id="@+id/new_item_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/new_item_prize_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_item_prize_text" />

    <EditText
        android:id="@+id/new_item_prize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/new_item_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_item_buttom_text" />

</LinearLayout>