<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10pt"
    android:orientation="vertical"
    tools:context="com.example.rojo.milistadelacompra.DeleteItemActivity">

    <TextView
        android:id="@+id/text_delete_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_item_title_text"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/delete_item_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_item_name" />

    <Spinner
        android:id="@+id/select_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"/>

    <Button
        android:id="@+id/delete_item_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_item_button_text" />

</LinearLayout>