<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10pt"
    android:orientation="vertical"
    tools:context="com.example.rojo.milistadelacompra.RegisterActivity">

    <TextView
        android:id="@+id/texte_create_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_list_text"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/new_list_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_list_name" />

    <EditText
        android:id="@+id/new_list_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/new_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_list_button" />

</LinearLayout>