<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10pt"
    android:orientation="vertical"
    tools:context="com.example.rojo.milistadelacompra.ShareListActivity">

    <TextView
        android:id="@+id/text_share_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_list_text_fragment"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/share_list_user_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_list_text_user" />

    <EditText
        android:id="@+id/share_list_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/share_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_lit_button_text" />

</LinearLayout>