<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10pt"
    android:orientation="vertical"
    tools:context="com.example.rojo.milistadelacompra.EditItemActivity">

    <TextView
        android:id="@+id/text_edit_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:text="@string/edit_item"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/select_item_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/item_quantity_text"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/text_edit_item"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="115dp"
        android:text="@string/new_item_quantity_text" />

    <EditText
        android:id="@+id/item_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/text_edit_item"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="144dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/item_prize_text"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="211dp"
        android:text="@string/new_item_prize_text" />

    <EditText
        android:id="@+id/item_prize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_prize_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/edit_item_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/text_edit_item"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="303dp"
        android:text="@string/edit_item_button_text" />

    <TextView
        android:id="@+id/edit_item_name_text"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_edit_item"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="4dp"
        android:text="@string/delete_item_name" />

</RelativeLayout>